# DLTHealthAdvisor

./: .replit  Pasted-Crit-rios-Utilizados-na-Avalia-o-Seguran-a-Resist-ncia-contra-ataques-incluindo-ataques-bizantin-1728385193153.txt  README.md  api.py  auth.py  database.py  decision_tree.py  main.py  pyproject.toml  replit.nix  suenia.c@hotmail.com  test_api.py  utils.py  visualization.py
data/: dlt_frameworks.csv
